# cloud_migration_algorithms

./: .gitignore  CMakeLists.txt  README.md
algorithms_lib/: CMakeLists.txt  algorithms.h  baseline.cpp  flow_grouping.cpp  lowerbound.cpp  parallel_baseline.cpp  parallelizer.h
benchmarks/: CMakeLists.txt  benchmark.cpp  count_lowerbound.cpp
cmake/: FindGlog.cmake
common/: CMakeLists.txt  metrics.cpp  metrics.h  solution.h
measurements/: avg_hist.py  baseline2.json  baseline3.json  baseline4.json  baseline_metrics.json  common.py  flow_grouping2.json  flow_grouping3.json  flow_grouping4.json  lowerbounds.txt  parallel_baseline2.json  parallel_baseline3.json  parallel_baseline4.json  parallel_baseline_metrics.json  parallel_flow_grouping.json  show_metrics.py  show_plot.py
proto/: CMakeLists.txt  metrics.proto  test_case.proto
test_dumper/: CMakeLists.txt  test_dumper.cpp
testenv_lib/: CMakeLists.txt  algo_stat_maker.cpp  algo_stat_maker.h  grader  grader.cpp  grader.h  metrics.cpp  metrics.h  solution.cpp  solution.h  test_environment.cpp  test_environment.h  test_generator.cpp  test_generator.h
